
.PHONY: System.Drawing.Postscript.dll

all-local: System.Drawing.Postscript.dll

System.Drawing.Postscript.dll:
	"$(CSANT)" $(CSANT_FLAGS) -f System.Drawing.Postscript.build all

CLEANFILES = System.Drawing.Postscript.dll

pnetassembliesdir = $(libdir)/cscc/lib
pnetassemblies_DATA = System.Drawing.Postscript.dll
