
SUBDIRS = Custommarshalers \
		  System.Management \
		  System.Messaging \
		  System.ServiceProcess \
		  System.Runtime.Serialization.Formatters.Soap \
		  PEAPI \
		  Mono.Data.Tds \
		  System.Data \
		  Mono.Data.PostgreSqlClient \
		  Mono.Data.MySql \
		  Mono.Data.DB2Client \
		  System.Data.OracleClient \
		  Mono.Directory.LDAP \
		  Mono.GetOptions \
		  Mono.Posix \
		  Mono.Cairo \
		  System.Data.SqlXml \
		  System.Data.ObjectSpaces \
		  Novell.Directory.Ldap \
		  Mono.Security \
		  Mono.Security.Win32 \
		  System.Security

##		  Npgsql
