
SUBDIRS = Custommarshalers \
		  System.Management \
		  System.Messaging \
		  System.ServiceProcess \
		  System.Runtime.Serialization.Formatters.Soap \
		  PEAPI \
		  System.Security \
		  Mono.Security \
		  Mono.Data.Tds \
		  System.Data \
		  Mono.Data.PostgreSqlClient \
		  Mono.Data.MySql \
		  Mono.Data.DB2Client \
		  Mono.Data.SqliteClient \
		  Mono.Data.SybaseClient \
		  Mono.Data.TdsClient \
		  System.Data.OracleClient \
		  System.Web \
		  System.Web.Services\
		  Mono.Directory.LDAP \
		  Mono.GetOptions \
		  Mono.Posix \
		  Mono.Cairo \
		  System.Data.SqlXml \
		  System.Data.ObjectSpaces \
		  Novell.Directory.Ldap \
		  System.DirectoryServices \
		  Mono.Security.Win32 \
		  Mono.Http 
