
SUBDIRS = Custommarshalers \
		  System.Management \
		  System.Messaging \
		  System.ServiceProcess \
		  System.Runtime.Serialization.Formatters.Soap \
		  PEAPI \
		  Mono.Security \
		  System.Security \
		  Mono.Data.Tds \
		  System.Data \
		  ByteFX.Data \
		  Npgsql \
		  Mono.Data.PostgreSqlClient \
		  Mono.Data.MySql \
		  Mono.Data.DB2Client \
		  Mono.Data.SqliteClient \
		  Mono.Data.SybaseClient \
		  Mono.Data.TdsClient \
		  System.Data.OracleClient \
		  System.Web \
		  System.Web.Services\
		  System.Runtime.Remoting \
		  Mono.Directory.LDAP \
		  Mono.GetOptions \
		  Mono.Cairo \
		  System.Data.SqlXml \
		  System.Data.ObjectSpaces \
		  Novell.Directory.Ldap \
		  System.DirectoryServices \
		  Mono.Http 

#		  Mono.Security.Win32
#		  Mono.Posix
